# open-re

./: .cspell.json  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.cspell-dicts/: acronyms.txt  companies.txt  software-terms.txt  technical-terms.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  markdown-link-check.json  milestones.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  research_task.md
.github/workflows/: ci.yml  release.yml
.obsidian/: graph.json  workspace.json
crates/openre-ai/: Cargo.toml
crates/openre-ai/src/: cache.rs  lib.rs  privacy.rs  prompt_compiler.rs  providers.rs  router.rs  service.rs  tools.rs
crates/openre-ai/src/providers/: llama_cpp.rs  onnx.rs  remote.rs
crates/openre-ai/src/templates/: analyze_function_system.txt  analyze_function_user.txt  detect_vulnerabilities_system.txt  detect_vulnerabilities_user.txt  improve_decompilation_system.txt  improve_decompilation_user.txt  infer_types_system.txt  infer_types_user.txt  recover_variables_system.txt  recover_variables_user.txt
crates/openre-analysis/: Cargo.toml
crates/openre-analysis/src/: incremental.rs  lib.rs  metrics.rs  orchestrator.rs  progress.rs  stages.rs
crates/openre-analysis/src/binary/: common.rs  elf.rs  metadata.rs  mod.rs  pe.rs  static_analysis.rs  traits.rs  upload.rs
crates/openre-api/: Cargo.toml
crates/openre-api/src/: auth.rs  error.rs  grpc.rs  http.rs  lib.rs  middleware.rs  routes.rs  state.rs  validation.rs  versioning.rs  websocket.rs
crates/openre-api/src/routes/: ai.rs  analysis.rs  auth.rs  exports.rs  files.rs  functions.rs  plugins.rs  projects.rs  users.rs
crates/openre-cli/: Cargo.toml
crates/openre-cli/src/: config.rs  context.rs  error.rs  main.rs  output.rs
crates/openre-cli/src/commands/: ai.rs  analysis.rs  auth.rs  config.rs  file.rs  function.rs  mod.rs  plugin.rs  project.rs  server.rs
crates/openre-config/: Cargo.toml
crates/openre-config/src/: config.rs  layers.rs  lib.rs
crates/openre-core/: Cargo.toml
crates/openre-core/src/: error.rs  ids.rs  lib.rs  traits.rs
crates/openre-plugins/: Cargo.toml
crates/openre-plugins/src/: capability.rs  lib.rs  manifest.rs  registry.rs  runtime.rs  sandbox.rs  sdk.rs
crates/openre-queue/: Cargo.toml
crates/openre-queue/src/: auto_scaler.rs  cancellation.rs  job.rs  lib.rs  metrics.rs  progress_tracker.rs  queue_manager.rs  retry_policy.rs  scheduler.rs  worker_pool.rs
crates/openre-storage/: Cargo.toml
crates/openre-storage/src/: global.rs  lib.rs  migrations.rs  object.rs  project.rs
crates/openre-telemetry/: Cargo.toml
crates/openre-telemetry/src/: audit.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  Dockerfile.worker-ai  nginx.conf
docs/: CompetitiveAnalysis.md  DEVELOPMENT.md  ExecutiveSummary.md  FeatureBrainstorm.md  INSTALLATION.md  MarketResearch.md  ProductRequirements.md  Risks.md  Roadmap.md  SuccessMetrics.md  UserPersonas.md  Vision.md
docs/architecture/: 01-system-overview.md  02-repository-structure.md  03-backend-architecture.md  04-frontend-architecture.md  05-plugin-architecture.md  06-ai-architecture.md  07-analysis-pipeline.md  08-database-design.md  09-queue-worker-system.md  10-security-model.md
frontend/: pnpm-lock.yaml  turbo.json
frontend/apps/web/: package.json  tsconfig.json  vite.config.ts
frontend/apps/web/src/: App.tsx  index.css  main.tsx
frontend/apps/web/src/components/: Layout.tsx
frontend/apps/web/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/apps/web/src/lib/: api.ts  utils.ts
frontend/apps/web/src/pages/: AI.tsx  Analysis.tsx  Dashboard.tsx  Files.tsx  FunctionDetail.tsx  Functions.tsx  Login.tsx  NotFound.tsx  Plugins.tsx  ProjectDetail.tsx  Projects.tsx  Register.tsx  Settings.tsx
python/: pyproject.toml
python/openre/: __init__.py  analysis.py  client.py  models.py  plugins.py
python/openre-bindings/: Cargo.toml
python/openre-bindings/src/: analysis.rs  client.rs  lib.rs  models.rs  plugins.rs
tests/: integration_tests.rs  unit_tests.rs
