[workspace]
resolver = "2"
members = [
    "crates/openre-core",
    "crates/openre-config",
    "crates/openre-telemetry",
    "crates/openre-storage",
    "crates/openre-queue",
    "crates/openre-plugins",
    "crates/openre-analysis",
    "crates/openre-ai",
    "crates/openre-api",
    "crates/openre-cli",
]

exclude = [
    "frontend",
    "docker",
    "docs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RXVEN-1907/open-re"
description = "open-re: Open-source reverse engineering platform"
categories = ["development-tools", "debugging", "security"]
keywords = ["reverse-engineering", "binary-analysis", "disassembler", "decompiler", "malware-analysis"]

[workspace.dependencies]
# Core
tokio = { version = "1.38", features = ["full", "tracing"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.25", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.25", features = ["tonic"] }
opentelemetry-prometheus = "0.25"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
dashmap = "5.5"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
once_cell = "1.19"
parking_lot = "0.12"
bytes = "1.5"
base64 = "0.21"
hex = "0.4"
urlencoding = "2.1"
rand = "0.8"
fastrand = "2.0"
sha2 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
bcrypt = "0.15"
jsonwebtoken = { version = "9.2" }
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4.0" }
utoipa-swagger-ui = "5.0"

# Web
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "limit", "timeout"] }
tonic = { version = "0.10", features = ["tls", "transport"] }
prost = { version = "0.12", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }
governor = { version = "0.6", features = ["std"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "streams", "script", "connection-manager"] }
r2d2 = "0.8"
r2d2_sqlite = "0.20"

# Storage - commented out for now
# aws-sdk-s3 = { version = "1.0" }
# aws-config = { version = "1.0" }

# AI/ML - commented out for now, will be added when implementing AI features
# ort = { version = "1.7", features = ["load-model", "dynamic"] }
# llama-cpp-2 = { version = "0.1", features = ["metal", "cuda", "vulkan", "blas"] }
# tokenizers = "0.15"
# candle-core = { version = "0.5", features = ["cuda"] }
# candle-nn = { version = "0.5", features = ["cuda"] }
# candle-transformers = { version = "0.5", features = ["cuda"] }

# WASM
wasmtime = { version = "20.0", features = ["cranelift", "wat"] }
wasmparser = "0.215"
ring = { version = "0.17", features = ["std"] }

# Config
figment = { version = "0.10", features = ["toml", "env", "json", "yaml"] }
config = { version = "0.13", features = ["toml", "env", "yaml"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "help", "usage", "suggestions", "cargo"] }
clap_complete = "4.5"
indicatif = "0.17"
colored = "2.0"
tabled = "0.16"
num_cpus = "1.16"
notify = "6.1"

# Testing
tempfile = "3.8"
mockall = "0.12"
proptest = "1.4"
test-case = "3.0"

# Benchmarking
criterion = "0.5"

[workspace.lints]
rust_2021_idioms = { level = "warn" }
unused_crate_dependencies = { level = "warn" }
unused_import_braces = { level = "warn" }
unused_lifetimes = { level = "warn" }
unused_qualifications = { level = "warn" }
variant_size_differences = { level = "warn" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true