[package]
name = "openre-config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Configuration management for open-re"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
openre-core = { path = "../openre-core" }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
num_cpus = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }