[package]
name = "openre-storage"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Storage abstractions (PostgreSQL, SQLite, S3) for open-re"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
openre-core = { path = "../openre-core" }
openre-config = { path = "../openre-config" }
openre-telemetry = { path = "../openre-telemetry" }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled", "serde_json", "chrono", "uuid"] }
goblin = { workspace = true }
object = { workspace = true }
scroll = { workspace = true }
# pe = { workspace = true }  # Has alignment issues, using goblin for PE parsing instead
xmas-elf = { workspace = true }
# aws-sdk-s3 = { version = "0.30", features = ["behavior-version-latest"] }
# aws-config = { version = "0.30", features = ["behavior-version-latest"] }
# aws-types = { version = "0.30" }
dashmap = "5.5"
once_cell = { workspace = true }