[package]
name = "openre-telemetry"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Telemetry (logging, metrics, tracing, audit) for open-re"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
openre-core = { path = "../openre-core" }
openre-config = { path = "../openre-config" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
dashmap = "5.5"
once_cell = { workspace = true }
async-trait = { workspace = true }