[package]
name = "openre_bindings"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RXVEN-1907/open-re"
description = "Python bindings for open-re Rust crates"
categories = ["development-tools", "debugging", "security"]
keywords = ["reverse-engineering", "binary-analysis", "pyo3", "ffi"]

[lib]
name = "openre_bindings"
crate-type = ["cdylib"]

[dependencies]
openre-core = { path = "../../../crates/openre-core" }
openre-config = { path = "../../../crates/openre-config" }
openre-telemetry = { path = "../../../crates/openre-telemetry" }
openre-storage = { path = "../../../crates/openre-storage" }
openre-queue = { path = "../../../crates/openre-queue" }
openre-plugins = { path = "../../../crates/openre-plugins" }
openre-analysis = { path = "../../../crates/openre-analysis" }
openre-ai = { path = "../../../crates/openre-ai" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311", "serde"] }
pyo3-asyncio = { version = "0.21", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
pyo3-build-config = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true